[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepstate"
version = "0.0.1"
authors = [
  { name="Neo2854", email="pavansantoshls990@gmail.com" },
]
description = "Easy to implement state-of-the-art deep learning models based on pyTorch."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]